# Hearts

./: CMakeLists.txt  build.sh
bugs/: bug_logs
core/: CMakeLists.txt  main.c
game/: CMakeLists.txt  com.c  com.h  court.c  court.h  poker.c  poker.h
ut/: CMakeLists.txt  main.c
